@@ -3,6 +3,7 @@ Akeeba Panopticon 1.3.1
 ================================================================================
 + Better worded messages when you have Akeeba Backup Core instead of Professional
 ~ Make accurate PHP CLI path detection optional
+# [HIGH] Cannot set up update preferences for Joomla! extensions whose name does nor conform to Joomla's standards (even though Joomla allows them to be installed, because it fails to enforce its own naming standards!)
 # [MEDIUM] PHP error trying to log in with a username that doesn't exist
 # [LOW] Logs and Tasks views: warning if there's a log/task belonging to a deleted site
 # [LOW] If an extension's short name starts with the character `a`, that letter is cut off
